- Integrated multi-version proxy mechanism - Fixed iwd mismatch errors caused by iw_15.iwd file - Reorganized some code into separate files

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -56,6 +56,16 @@ set sv_masterPort "20710"
 set sv_masterServer "cod2master.activision.com"
 set sv_minimizeSysteminfo "0"
 set sv_noauthorize "0"
+set sv_proxiesVisibleForTrackers "0"
+set sv_proxyAddress_1_0 "0.0.0.0:28960"
+set sv_proxyAddress_1_2 "0.0.0.0:28961"
+set sv_proxyAddress_1_3 "0.0.0.0:28962"
+set sv_proxyEnable_1_0 "0"
+set sv_proxyEnable_1_2 "0"
+set sv_proxyEnable_1_3 "0"
+// sv_proxyForwardAddress_1_0 is set dynamically by default, but can be overriden
+// sv_proxyForwardAddress_1_2 is set dynamically by default, but can be overriden
+// sv_proxyForwardAddress_1_3 is set dynamically by default, but can be overriden
 set sv_reservedConfigstringBufferSize "256"
 set sv_timeoutMessages "1"
 set sv_verifyIwds "1"
