--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,6 +3,7 @@ name: "Build & Test"
 on:
   push:
     branches: [ "dev" ]
+    paths-ignore: [ "**.md", "**.yml" ]
   pull_request:
     branches: [ "dev" ]
 
