--- a/.github/workflows/build_test_release.yml
+++ b/.github/workflows/build_test_release.yml
@@ -1,7 +1,10 @@
 name: "Build, Test & Release"
 
+# Runs once a new tag is pushed
 on:
-  workflow_dispatch:
+  push:
+    branches: [ "dev" ]
+    tags: [ "v*.*" ]
 
 jobs:
   ubuntu-mysql1-nospeex:
@@ -21,5 +24,6 @@ jobs:
       run: if ! OUTPUT=$({ LD_PRELOAD=./code/bin/libcod2.so ./cod2_lnxded 1>&2; } 2>&1) && echo $OUTPUT | grep 'Unloaded extension' > /dev/null; then (exit 0); else (exit 1); fi
     - name: "Release"
       uses: softprops/action-gh-release@v2 # https://github.com/softprops/action-gh-release
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: ./code/bin/libcod2.so
