added g_brushModelCollisionTweaks dvar

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -11,6 +11,7 @@
 set con_coloredPrints "0"
 set fs_callbacks ""
 set fs_library ""
+set g_brushModelCollisionTweaks "0"
 set g_bulletDrop "0"
 set g_bulletDropMaxTime "10000"
 set g_corpseHit "1"
