updated sample libcod.cfg

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -11,6 +11,7 @@
 set con_coloredPrints "0"
 set fs_callbacks ""
 set fs_library ""
+set fs_mapScriptDirectories "0"
 set g_brushModelCollisionTweaks "0"
 set g_bulletDrop "0"
 set g_bulletDropMaxTime "10000"
@@ -18,12 +19,15 @@ set g_corpseHit "1"
 set g_debugCallbacks "0"
 set g_debugEvents "0"
 set g_debugStaticModels "0"
+set g_forceRate "0"
+set g_forceSnaps "0"
 set g_logPickup "1"
 set g_mantleBlockEnable "1"
 set g_playerCollision "1"
 set g_playerCollisionEjectDamageAllowed "0"
 set g_playerCollisionEjectDuration "300"
 set g_playerEject "1"
+set g_reservedModels "0"
 set g_resetSlide "0"
 set g_safePrecache "0"
 set g_spawnMapTurrets "1"
@@ -48,6 +52,7 @@ set sv_cracked "0"
 set sv_disconnectMessages "1"
 set sv_downloadMessage ""
 set sv_downloadMessageAtMap "1"
+set sv_downloadMessageForLegacyClients ""
 set sv_kickGamestateLimitedClients "1"
 set sv_kickMessages "1"
 set sv_limitLocalRcon "1"
