updated sample libcod.cfg

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -23,6 +23,7 @@ set g_forceRate "0"
 set g_forceSnaps "0"
 set g_logPickup "1"
 set g_mantleBlockEnable "1"
+set g_noMoverBlockage "0"
 set g_playerCollision "1"
 set g_playerCollisionEjectDamageAllowed "0"
 set g_playerCollisionEjectDuration "300"
@@ -53,6 +54,8 @@ set sv_disconnectMessages "1"
 set sv_downloadMessage ""
 set sv_downloadMessageAtMap "1"
 set sv_downloadMessageForLegacyClients ""
+set sv_downloadNotifications "0"
+set sv_fastDownload "0"
 set sv_kickGamestateLimitedClients "1"
 set sv_kickMessages "1"
 set sv_limitLocalRcon "1"
