--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -56,6 +56,7 @@ set sv_downloadMessageAtMap "1"
 set sv_downloadMessageForLegacyClients ""
 set sv_downloadNotifications "0"
 set sv_fastDownload "0"
+set sv_isLookingAtOnDemand "0"
 set sv_kickGamestateLimitedClients "1"
 set sv_kickMessages "1"
 set sv_limitLocalRcon "1"
