--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -6,7 +6,7 @@
 //
 // Documentation & source: https://github.com/ibuddieat/zk_libcod
 // Unless stated otherwise, all values given here preserve the stock behavior
-// of the game. Some variables are not documented in detail yet.
+// of the game.
 
 set con_coloredPrints "0"
 set fs_callbacks ""
