--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,7 +3,7 @@ name: "Build & Test"
 on:
   push:
     branches: [ "dev" ]
-    paths-ignore: [ "**.htm", "**.html", "**.md", "**.yml" ]
+    paths-ignore: [ "**.cfg", "**.htm", "**.html", "**.md", "**.yml" ]
   pull_request:
     branches: [ "dev" ]
 
