--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -70,12 +70,15 @@ set sv_proxiesVisibleForTrackers "0"
 set sv_proxyAddress_1_0 "0.0.0.0:28960"
 set sv_proxyAddress_1_2 "0.0.0.0:28961"
 set sv_proxyAddress_1_3 "0.0.0.0:28962"
+set sv_proxyAddress_1_3_119 "0.0.0.0:28963"
 set sv_proxyEnable_1_0 "0"
 set sv_proxyEnable_1_2 "0"
 set sv_proxyEnable_1_3 "0"
+set sv_proxyEnable_1_3_119 "0"
 // sv_proxyForwardAddress_1_0 is set dynamically by default, but can be overriden
 // sv_proxyForwardAddress_1_2 is set dynamically by default, but can be overriden
 // sv_proxyForwardAddress_1_3 is set dynamically by default, but can be overriden
+// sv_proxyForwardAddress_1_3_119 is set dynamically by default, but can be overriden
 set sv_reservedConfigstringBufferSize "256"
 set sv_timeoutMessages "1"
 set sv_verifyIwds "1"
