updated sample libcod.cfg

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -10,8 +10,10 @@
 
 set con_coloredPrints "0"
 set fs_callbacks ""
+set fs_gametypes ""
 set fs_library ""
 set fs_mapScriptDirectories "0"
+set fs_replaceStockMaps "0"
 set g_brushModelCollisionTweaks "0"
 set g_bulletDrop "0"
 set g_bulletDropMaxTime "10000"
