added g_droppedWeaponsNeglectBots dvar

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -21,6 +21,7 @@ set g_corpseHit "1"
 set g_debugCallbacks "0"
 set g_debugEvents "0"
 set g_debugStaticModels "0"
+set g_droppedWeaponsNeglectBots "0"
 set g_forceRate "0"
 set g_forceSnaps "0"
 set g_logPickup "1"
