added jump_carryMoverVelocity dvar

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -39,6 +39,7 @@ set g_spawnMapWeapons "1"
 set g_spectateBots "1"
 set g_triggerMode "1"
 set g_turretMissingTagTerminalError "1"
+set jump_carryMoverVelocity "0"
 set loc_loadLocalizedMods "0"
 set logErrors "0"
 set logfileRotate "0"
