added net_noFragmentationDelay dvar

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -45,6 +45,7 @@ set logErrors "0"
 set logfileRotate "0"
 set logfileName "console_mp_server.log" // Should be set before the stock "logfile" dvar is set to a value greater than zero
 set logTimestamps "0"
+set net_noFragmentationDelay "0"
 set scr_turretDamageName "0"
 set sv_allowRcon "1"
 set sv_authorizePort "20700"
