added advanced snapshot controls

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -51,6 +51,7 @@ set sv_allowRcon "1"
 set sv_authorizePort "20700"
 set sv_authorizeServer "cod2master.activision.com"
 set sv_authorizeTimeout "3000" // Default: 1200000
+set sv_autoAddSnapshotEntities "1"
 set sv_botKickMessages "1"
 set sv_botReconnectMode "0"
 set sv_botUseTriggerUse "0"
