--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -87,6 +87,7 @@ set sv_proxyEnable_1_3_119 "0"
 // sv_proxyForwardAddress_1_3_119 is set dynamically by default, but can be overriden
 set sv_reservedConfigstringBufferSize "0"
 set sv_timeoutMessages "1"
+set sv_updateCursorHints "1"
 set sv_verifyIwds "1"
 set sv_version "1.3"
 set sv_wwwDlDisconnectedMessages "1"
