added sv_maxSnapshotEntities dvar

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -71,6 +71,7 @@ set sv_logHeartbeats "1"
 set sv_logRcon "1"
 set sv_masterPort "20710"
 set sv_masterServer "cod2master.activision.com"
+set sv_maxSnapshotEntities "1024"
 set sv_minimizeSysteminfo "0"
 set sv_noauthorize "0"
 set sv_proxiesVisibleForTrackers "0"
