added g_sendEmtpyOffhandEvents dvar

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -34,6 +34,7 @@ set g_playerEject "1"
 set g_reservedModels "0"
 set g_resetSlide "0"
 set g_safePrecache "0"
+set g_sendEmtpyOffhandEvents "1"
 set g_spawnMapTurrets "1"
 set g_spawnMapWeapons "1"
 set g_spectateBots "1"
