added sv_fastDownloadSpeed dvar

--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -64,6 +64,7 @@ set sv_downloadMessageAtMap "1"
 set sv_downloadMessageForLegacyClients ""
 set sv_downloadNotifications "0"
 set sv_fastDownload "0"
+set sv_fastDownloadSpeed "8"
 set sv_isLookingAtOnDemand "0"
 set sv_kickGamestateLimitedClients "1"
 set sv_kickMessages "1"
