--- a/doc/libcod.cfg
+++ b/doc/libcod.cfg
@@ -63,6 +63,7 @@ set sv_downloadMessage ""
 set sv_downloadMessageAtMap "1"
 set sv_downloadMessageForLegacyClients ""
 set sv_downloadNotifications "0"
+set sv_downloadRetransmitTimeout "1000"
 set sv_fastDownload "0"
 set sv_fastDownloadSpeed "8"
 set sv_isLookingAtOnDemand "0"
